# padme-fw

./: .gitignore  README.md  ReconstructionToy.cpp  SignalGeneratorToy.cpp  SignalToyMC.cc  SignalToyMC.cpp  TimeDiffMacro.C  _a_d_c_board_8cc.html  _a_d_c_board_8cc__incl.map  _a_d_c_board_8cc__incl.md5  _a_d_c_board_8hh.html  _a_d_c_board_8hh__dep__incl.map  _a_d_c_board_8hh__dep__incl.md5  _a_d_c_board_8hh__incl.map  _a_d_c_board_8hh__incl.md5  _a_d_c_board_8hh_source.html  _a_d_c_board_8py.html  _a_d_c_board_g_u_i_8py.html  _a_d_c_event_8cc.html  _a_d_c_event_8cc__incl.map  _a_d_c_event_8cc__incl.md5  _a_d_c_event_8hh.html  _a_d_c_event_8hh__dep__incl.map  _a_d_c_event_8hh__dep__incl.md5  _a_d_c_event_8hh__incl.map  _a_d_c_event_8hh__incl.md5  _a_d_c_event_8hh_source.html  _a_d_c_event_tags_8hh.html  _a_d_c_event_tags_8hh.js  _a_d_c_event_tags_8hh__dep__incl.map  _a_d_c_event_tags_8hh__dep__incl.md5  _a_d_c_event_tags_8hh_source.html  _a_d_c_file_8cc.html  _a_d_c_file_8cc__incl.map  _a_d_c_file_8cc__incl.md5  _a_d_c_file_8hh.html  _a_d_c_file_8hh__dep__incl.map  _a_d_c_file_8hh__dep__incl.md5  _a_d_c_file_8hh__incl.map  _a_d_c_file_8hh__incl.md5  (+5457 more)
Configure/: Marco_config.sh  README  Raggi_test.sh  create_ssh_agent.sh  env.sh  get_cvmfs.sh  padme_init.csh  padme_init.sh  padme_init.zsh  padme_init_cvmfs_centos7.sh  padme_init_cvmfs_centos7_root5.sh  padme_init_grid.sh  padme_init_mac.sh
Documentation/: Doxyfile
Level1/: ADCHisto.cpp  Makefile  MergeRuns  PadmeFileMerger.cpp  PadmeFileMerger.cpp.off  PadmeLevel1.cpp  PadmeMerger.cpp  RawHisto.cpp  ReadTest.cpp  RegisterEventsInDB  merge_runs.py  setlib.sh
OnlineMonitor/: AnalyzeFiles.cpp  GetNumberOfRawEvents.cpp  Makefile  MergeRun.cpp  OnlineMonitor.cpp  OnlineMonitor.sh  OnlineMonitor_wd.sh  OnlineRecoMonitor.cpp  OnlineRecoMonitor_wd.sh  TestChain.cpp
PADME_Sensitivity/: #env.sh#  .#env.sh  CMakeLists.txt  CMakeLists.txt~  DP_mass_sigma_direct_ee_1402.root  DP_mass_sigma_direct_mumu_2101.root  DP_mass_sigma_meson_ee_1402.root  DP_mass_sigma_meson_mumu_2101.root  DP_nexp_ee.root  DP_nexp_mumu.root  GNUmakefile  X17Config.conf  input.conf  output_debug.root  output_exclusion.root  play_with_roofit.cc  roofit_full.cxx  roofit_full.cxx~
PadmeAna/: GNUmakefile  PadmeAna.cc
PadmeAnalysis/: AnalyzeTheAnalysisForMINDIST.cc  DrawCosmic.C  DrawCosmic2.C  DrawCosmic_v0.C  DrawCosmic_v1.C  DrawCosmic_v2.C  ECAL_TR_tree.root  GNUmakefile  GNUmakefile_mac  PVetoCalib.cc  PadmeAnalysis.cc  PrepareUserAnalysis.py  checkAnalysisOutput.cc  fitMuons.cc  getvalues.cc  kuree.sh  log  mapECal.cc  padmedisplay.C  padmedisplay.h  reco-230405-ready.list  reco-230419-ready.list  subtract.cc
PadmeDAQ/: Makefile
PadmeDB/: PadmeDAQ_data.txt  PadmeDAQ_schema.sql  PadmeDAQ_setup.py  PadmeDAQ_setup.readme
PadmeGeom/: Makefile
PadmeMC/: GNUmakefile  PADMEMC  PADMEMC.cc  RunIII.mac  RunIII_OffRes.mac  binmake.gmk  doxygen.cfg  make.sh  prod.mac  run2020.mac  vis.mac  vis.mac.example
PadmeMonitor/: PadmeMonitor.cpp
PadmeReco/: #GNUmakefile#  DrawCosmic.C  DrawCosmicReco.C  GNUmakefile  GNUmakefile_mac  GridLaunchScript.py  PadmeAnalysisMain.cc  PadmeEventDisplay.cc  PadmeReco.cc  config.bkp  reco.pl  template.txt
PadmeReco3/: GNUmakefile  PadmeReco.cc  TimeAnalysis.cc  WaveformAnalysis.cc
PadmeRoot/: Makefile  Makefile_mac  PersistencyLinkDef.hh
PadmeSens/: CMakeLists.txt  GNUmakefile  LinkDef.h  env.sh  input.conf
PadmeSens/include/: GlobalParams.h  StatisticsModel.h
PadmeSens/include_NA62/: ChannelModel.h  GlobalParams.h  MuMuSignalShape.h
PadmeSens/src/: ChannelModel.cxx  MuMuBkgShape.cxx  MuMuSignalShape.cxx  StatisticsModel.cxx
PadmeSens/src_NA62/: ChannelModel.cxx  MuMuBkgShape.cxx
PadmeTrig/: Makefile  standalone.cfg  stop_trig.sh  (+1 more)
(+1707 files in other folders)
